Require the minimum JDK version to 11 for examples only (#3663)
Motivation:
So that we can leverage JDK 9+ APIs such as `Map.of(...)`.

Modifications:
- Use 11 for javac `release` option.
- (Misc) Add `rootProject.ext.testJavaVersion` so that we can use it in any of the build.gradle files.

Result:
- You need to use at least JDK 11 for examples.